; ModuleID = '/home/carl/AnghaBench/torch7/lib/luaT/extr_luaT.c_luaT_newlocalmetatable.c'
source_filename = "/home/carl/AnghaBench/torch7/lib/luaT/extr_luaT.c_luaT_newlocalmetatable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@luaT_lua_newmetatable = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @luaT_newlocalmetatable(i32* %0, i8* %1, i8* %2, i64 %3, i64 %4, i64 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i8* %2, i8** %10, align 8
  store i64 %3, i64* %11, align 8
  store i64 %4, i64* %12, align 8
  store i64 %5, i64* %13, align 8
  store i32 %6, i32* %14, align 4
  %15 = load i32*, i32** %8, align 8
  %16 = load i64, i64* @luaT_lua_newmetatable, align 8
  call void @lua_pushcfunction(i32* %15, i64 %16)
  %17 = load i32*, i32** %8, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = call i64 @lua_pushstring(i32* %17, i8* %18)
  %20 = load i8*, i8** %10, align 8
  %21 = icmp ne i8* %20, null
  br i1 %21, label %22, label %26

22:                                               ; preds = %7
  %23 = load i32*, i32** %8, align 8
  %24 = load i8*, i8** %10, align 8
  %25 = call i64 @lua_pushstring(i32* %23, i8* %24)
  br label %28

26:                                               ; preds = %7
  %27 = load i32*, i32** %8, align 8
  call void @lua_pushnil(i32* %27)
  br label %28

28:                                               ; preds = %26, %22
  %29 = load i64, i64* %11, align 8
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %34

31:                                               ; preds = %28
  %32 = load i32*, i32** %8, align 8
  %33 = load i64, i64* %11, align 8
  call void @lua_pushcfunction(i32* %32, i64 %33)
  br label %36

34:                                               ; preds = %28
  %35 = load i32*, i32** %8, align 8
  call void @lua_pushnil(i32* %35)
  br label %36

36:                                               ; preds = %34, %31
  %37 = load i64, i64* %12, align 8
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %42

39:                                               ; preds = %36
  %40 = load i32*, i32** %8, align 8
  %41 = load i64, i64* %12, align 8
  call void @lua_pushcfunction(i32* %40, i64 %41)
  br label %44

42:                                               ; preds = %36
  %43 = load i32*, i32** %8, align 8
  call void @lua_pushnil(i32* %43)
  br label %44

44:                                               ; preds = %42, %39
  %45 = load i64, i64* %13, align 8
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %50

47:                                               ; preds = %44
  %48 = load i32*, i32** %8, align 8
  %49 = load i64, i64* %13, align 8
  call void @lua_pushcfunction(i32* %48, i64 %49)
  br label %52

50:                                               ; preds = %44
  %51 = load i32*, i32** %8, align 8
  call void @lua_pushnil(i32* %51)
  br label %52

52:                                               ; preds = %50, %47
  %53 = load i32, i32* %14, align 4
  %54 = icmp sgt i32 %53, 0
  br i1 %54, label %55, label %58

55:                                               ; preds = %52
  %56 = load i32*, i32** %8, align 8
  %57 = load i32, i32* %14, align 4
  call void @lua_pushvalue(i32* %56, i32 %57)
  br label %60

58:                                               ; preds = %52
  %59 = load i32*, i32** %8, align 8
  call void @lua_pushnil(i32* %59)
  br label %60

60:                                               ; preds = %58, %55
  %61 = load i32*, i32** %8, align 8
  %62 = call i32 @lua_call(i32* %61, i32 6, i32 1)
  %63 = load i32*, i32** %8, align 8
  %64 = load i8*, i8** %9, align 8
  %65 = call i8* @luaT_typenameid(i32* %63, i8* %64)
  ret i8* %65
}

declare dso_local void @lua_pushcfunction(i32*, i64) #1

declare dso_local i64 @lua_pushstring(i32*, i8*) #1

declare dso_local void @lua_pushnil(i32*) #1

declare dso_local void @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @lua_call(i32*, i32, i32) #1

declare dso_local i8* @luaT_typenameid(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
